"Search" = "Search";
"Wishlist" = "Wishlist";
"Settings" = "Settings";

"Basic" = "Basic";
"Apperance" = "Apperance";
"Dark Apperance" = "Dark Apperance";
"App Icon" = "App Icon";
"App Language" = "App Language";

"Privacy" = "Privacy";
"Terms of Service" = "Terms of Service";

"Search Movies" = "Search Movies";
